--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,81 +9,99 @@ jobs:
     timeout-minutes: 3600
 
     steps:
-      - name: Create VNC User with Secure Password
+      - name: Generate VNC Password
         run: |
-          # Generate random password (same method as Windows script)
-          password=$(LC_ALL=C tr -dc 'A-Za-z0-9!@#$%^&*()_+=' < /dev/urandom | head -c 16)
+          # Generate random password (16 characters)
+          password=$(openssl rand -base64 12 | tr -d '/+=' | cut -c1-16)
           
-          # Create user Yanzz
-          sudo dscl . -create /Users/Yanzz
-          sudo dscl . -create /Users/Yanzz UserShell /bin/bash
-          sudo dscl . -create /Users/Yanzz RealName "Yanzz"
-          sudo dscl . -create /Users/Yanzz UniqueID 1001
-          sudo dscl . -create /Users/Yanzz PrimaryGroupID 80
-          sudo dscl . -create /Users/Yanzz NFSHomeDirectory /Users/Yanzz
-          
-          # Set password
-          sudo dscl . -passwd /Users/Yanzz "$password"
-          
-          # Add to admin group
-          sudo dscl . -append /Groups/admin GroupMembership Yanzz
-          
-          # Create home directory
-          sudo createhomedir -c -u Yanzz
-          
-          echo "VNC_CREDS=User: Yanzz | Password: $password" >> $GITHUB_ENV
+          # Store password in environment
           echo "VNC_PASSWORD=$password" >> $GITHUB_ENV
+          
+          echo "✓ VNC Password generated"
 
       - name: Install Tailscale
         run: |
-          # Download and install Tailscale
-          curl -o /tmp/tailscale.zip https://pkgs.tailscale.com/stable/tailscale_1.82.0_amd64.zip
-          unzip /tmp/tailscale.zip -d /tmp/
+          # Download Tailscale for macOS
+          curl -L -o /tmp/Tailscale.pkg "https://pkgs.tailscale.com/stable/Tailscale-1.82.0-macos.pkg"
+          
+          # Install Tailscale
           sudo installer -pkg /tmp/Tailscale.pkg -target /
           
-          # Start Tailscale daemon
-          sudo /Applications/Tailscale.app/Contents/MacOS/Tailscale up --authkey=${{ secrets.TAILSCALE_AUTH_KEY }} --hostname=gh-mac-${{ github.run_id }}
+          # Wait for installation
+          sleep 3
+          
+          # Start Tailscale daemon using launchd
+          sudo launchctl load /Library/LaunchDaemons/com.tailscale.tailscaled.plist 2>/dev/null || true
+          
+          # Wait for daemon to be ready
+          echo "Starting Tailscale daemon..."
+          sleep 10
+          
+          # Connect to Tailscale network
+          echo "Connecting to Tailscale..."
+          sudo /Applications/Tailscale.app/Contents/MacOS/Tailscale up \
+            --authkey=${{ secrets.TAILSCALE_AUTH_KEY }} \
+            --hostname=gh-mac-${{ github.run_id }} \
+            --accept-routes \
+            --timeout=60s
+          
+          echo "✓ Tailscale connected successfully"
 
       - name: Enable VNC Screen Sharing
         run: |
-          # Enable Remote Management (VNC)
+          # Set VNC password using perl (most reliable method)
+          printf "%s" "$VNC_PASSWORD" | perl -we 'BEGIN { @k = unpack "C*", pack "H*", "1734516E8BA8C5E2FF1C39567390ADCA"}; $_ = <>; chomp; s/^(.{8}).*/$1/; @p = unpack "C*", $_; foreach (@k) { printf "%02X", $_ ^ (shift @p || 0) }; print "\n"' | sudo tee /Library/Preferences/com.apple.VNCSettings.txt > /dev/null
+          
+          # Enable Remote Management (ARD/VNC)
           sudo /System/Library/CoreServices/RemoteManagement/ARDAgent.app/Contents/Resources/kickstart \
             -activate \
             -configure -allowAccessFor -allUsers \
+            -configure -access -on \
             -configure -restart \
             -agent \
             -privs -all
           
-          # Configure VNC authentication
-          sudo defaults write /Library/Preferences/com.apple.RemoteManagement VNCLegacyConnectionsEnabled -bool true
+          # Enable VNC for all users
+          sudo /System/Library/CoreServices/RemoteManagement/ARDAgent.app/Contents/Resources/kickstart \
+            -configure -clientopts -setvnclegacy -vnclegacy yes
           
-          # Set VNC password using the generated password
-          echo "$VNC_PASSWORD" | sudo /usr/bin/vncpasswd -storepasswd /Library/Preferences/com.apple.VNCSettings.txt
-          
-          # Enable Screen Sharing
+          # Enable Screen Sharing service
+          sudo launchctl enable system/com.apple.screensharing
           sudo launchctl load -w /System/Library/LaunchDaemons/com.apple.screensharing.plist 2>/dev/null || true
           
-          # Restart ARD Agent
-          sudo /System/Library/CoreServices/RemoteManagement/ARDAgent.app/Contents/Resources/kickstart -restart -agent
+          # Alternative: direct systemsetup method
+          echo "$VNC_PASSWORD" | sudo tee /tmp/vncpass > /dev/null
+          sudo /usr/bin/vncpasswd -legacy -storepasswd /tmp/vncpass /Library/Preferences/com.apple.VNCSettings.txt 2>/dev/null || true
+          sudo rm -f /tmp/vncpass
+          
+          # Restart services
+          sudo /System/Library/CoreServices/RemoteManagement/ARDAgent.app/Contents/Resources/kickstart -restart -agent -console
+          sudo killall ARDAgent 2>/dev/null || true
+          
+          sleep 5
 
       - name: Get Tailscale IP
         run: |
           # Wait for Tailscale to get IP
-          sleep 10
+          sleep 5
           
           retries=0
-          while [ $retries -lt 10 ]; do
-            TSIP=$(/Applications/Tailscale.app/Contents/MacOS/Tailscale ip -4 2>/dev/null)
+          while [ $retries -lt 20 ]; do
+            TSIP=$(sudo /Applications/Tailscale.app/Contents/MacOS/Tailscale ip -4 2>/dev/null || true)
             if [ ! -z "$TSIP" ]; then
               echo "TAILSCALE_IP=$TSIP" >> $GITHUB_ENV
+              echo "✓ Got Tailscale IP: $TSIP"
               break
             fi
-            sleep 5
+            echo "⏳ Waiting for Tailscale IP... attempt $((retries + 1))/20"
+            sleep 3
             retries=$((retries + 1))
           done
           
           if [ -z "$TSIP" ]; then
-            echo "Failed to get Tailscale IP"
+            echo "❌ Failed to get Tailscale IP"
+            echo "Tailscale Status:"
+            sudo /Applications/Tailscale.app/Contents/MacOS/Tailscale status
             exit 1
           fi
 
@@ -100,11 +118,12 @@ jobs:
           echo ""
           echo "=== VNC ACCESS ==="
           echo "Address: $TAILSCALE_IP:5900"
-          echo "Username: Yanzz"
+          echo "Username: runner (or leave blank)"
           echo "Password: $VNC_PASSWORD"
           echo "=================="
           echo ""
           echo "Connect using VNC Viewer to: $TAILSCALE_IP"
+          echo "VNC Port: 5900"
           echo ""
           
           # Keep runner active
