--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: macOS VNC Access via Tailscale
+name: macOS VNC
 
 on:
   workflow_dispatch:
@@ -6,8 +6,7 @@ on:
 jobs:
   macos-vnc:
     runs-on: macos-latest
-    # Set timeout yang wajar
-    timeout-minutes: 60
+    timeout-minutes: 3600
 
     steps:
       - name: Generate VNC Password
@@ -16,122 +15,71 @@ jobs:
           echo "VNC_PASSWORD=$password" >> $GITHUB_ENV
           echo "✓ VNC Password: $password"
 
-      - name: Install and Start Tailscale Manually
+      - name: Install Tailscale
         run: |
           echo "Installing Tailscale..."
           brew install tailscale
           
-          # Lokasi binary tailscaled di macOS runner
-          TS_BINARY="/opt/homebrew/opt/tailscale/bin/tailscaled"
-          TS_SOCKET="/var/run/tailscale/tailscaled.sock"
-          
-          echo "Starting Tailscale daemon manually..."
-          # Jalankan daemon di latar belakang (Background)
-          # Menggunakan sudo dan menentukan lokasi state/socket
-          # Buat direktori socket jika belum ada
-          sudo mkdir -p $(dirname $TS_SOCKET)
-          sudo $TS_BINARY --state=/var/lib/tailscale.state --socket=$TS_SOCKET &
-          
-          # Tunggu sebentar agar daemon siap
-          echo "⏳ Waiting 15 seconds for daemon to start..."
-          sleep 15
+          echo "Starting Tailscale daemon..."
+          sudo brew services start tailscale
+          sleep 10
           
           echo "Connecting to Tailscale..."
-          # Gunakan socket path yang sama saat "up"
-          sudo tailscale --socket $TS_SOCKET up \
+          sudo tailscale up \
             --authkey=${{ secrets.TAILSCALE_AUTH_KEY }} \
             --hostname=gh-mac-${{ github.run_id }} \
-            --accept-routes \
-            --timeout=30s
+            --accept-routes
           
-          if [ $? -ne 0 ]; then
-            echo "❌ Tailscale connection failed. Check logs."
-            # Coba hentikan daemon jika gagal
-            sudo killall tailscaled 2>/dev/null || true
-            exit 1
-          fi
-
           echo "✓ Tailscale connected"
 
-      - name: Get Tailscale IP (Ringkas)
+      - name: Get Tailscale IP
         run: |
-          # Beri waktu tunggu lebih lama setelah "tailscale up" selesai.
-          # Jika Anda sudah menunggu 15-30 detik di langkah 'up', 5 detik ini cukup.
-          sleep 5 
-          
-          TSIP=$(sudo tailscale ip -4)
+          sleep 5
+          retries=0
+          while [ $retries -lt 20 ]; do
+            TSIP=$(sudo tailscale ip -4 2>/dev/null || true)
+            if [ ! -z "$TSIP" ]; then
+              echo "TAILSCALE_IP=$TSIP" >> $GITHUB_ENV
+              echo "✓ Tailscale IP: $TSIP"
+              break
+            fi
+            echo "⏳ Waiting for IP... $((retries + 1))/20"
+            sleep 3
+            retries=$((retries + 1))
+          done
           
           if [ -z "$TSIP" ]; then
             echo "❌ Failed to get Tailscale IP"
-            echo "Coba kembali ke kode yang menggunakan 'retry loop' jika ini sering gagal."
             exit 1
           fi
-          
-          echo "TAILSCALE_IP=$TSIP" >> $GITHUB_ENV
-          echo "✓ Tailscale IP: $TSIP"
 
-
-      - name: Setup Virtual Display Driver & Resolution
+      - name: Setup GUI, VNC, and Force Login
         run: |
-          echo "Configuring system display settings and resolution..."
+          echo "Setting password for runner user..."
+          # Kita butuh password untuk user 'runner' agar bisa login
+          sudo dscl . -passwd /Users/runner "$VNC_PASSWORD"
           
-          # Enable display resolution configuration
-          sudo defaults write /Library/Preferences/com.apple.windowserver DisplayResolutionEnabled -bool true
-          sudo defaults write /Library/Preferences/com.apple.Displays.plist DisplayAnyUserSets -bool true
-          
-          # Set explicit resolution (contoh: 1920x1080)
-          RES="1920x1080"
-          sudo defaults write /Library/Preferences/com.apple.windowserver "DisplayResolution" -string "$RES@1"
-          
-          # Force enable all displays
-          sudo defaults write /Library/Preferences/com.apple.Displays AppleDisplay -dict-add "DisplayVendorID" -int 0
-          sudo defaults write /Library/Preferences/com.apple.Displays AppleDisplay -dict-add "DisplayProductID" -int 0
-          
-          echo "✓ Display settings configured to $RES"
-
-      - name: Start GUI Session and Wait
-        run: |
-          # Kill any existing window server
-          sudo killall WindowServer 2>/dev/null || true
-          
-          # Start WindowServer/Aqua (GUI) for runner user
-          echo "Starting GUI session for runner user..."
-          # Memulai Finder/Dock memicu WindowServer
-          sudo launchctl asuser $(id -u runner) /usr/bin/open -a /System/Library/CoreServices/Finder.app &
-          sudo launchctl asuser $(id -u runner) /usr/bin/open -a /System/Library/CoreServices/Dock.app &
-          
-          # Mencegah tidur/sleep
-          sudo pmset -a displaysleep 0 sleep 0
-          caffeinate -d -i -s &
-          
-          # Waktu tunggu yang lebih lama (20 detik) untuk inisialisasi GUI
-          echo "⏳ Waiting 20 seconds for GUI to fully initialize..."
-          sleep 20
-          
-          echo "✓ GUI session started"
-
-      - name: Enable VNC Screen Sharing
-        run: |
-          echo "Configuring VNC..."
-          
-          # Set VNC password
+          echo "Configuring VNC password..."
+          # Ini script perl dari workflow-mu untuk set password VNC
           printf "%s" "$VNC_PASSWORD" | perl -we 'BEGIN { @k = unpack "C*", pack "H*", "1734516E8BA8C5E2FF1C39567390ADCA"}; $_ = <>; chomp; s/^(.{8}).*/$1/; @p = unpack "C*", $_; foreach (@k) { printf "%02X", $_ ^ (shift @p || 0) }; print "\n"' | sudo tee /Library/Preferences/com.apple.VNCSettings.txt > /dev/null
           
-          # Mengaktifkan Remote Management (VNC) dan mengatur izin
+          echo "Activating ARD/VNC and forcing GUI login..."
+          # Ini adalah perintah kuncinya: mengaktifkan VNC sekaligus memaksa login
           sudo /System/Library/CoreServices/RemoteManagement/ARDAgent.app/Contents/Resources/kickstart \
-            -activate -configure -allowAccessFor -allUsers \
+            -activate \
+            -configure -allowAccessFor -allUsers \
             -configure -access -on \
+            -configure -privs -all \
             -configure -clientopts -setvnclegacy -vnclegacy yes \
-            -configure -access -on -privs -all \
-            -restart -agent -console
-            
-          # Memuat ulang layanan Screen Sharing
+            -restart -agent -console \
+            -login -name runner -password "$VNC_PASSWORD"
+          
+          # Pastikan service-nya berjalan
           sudo launchctl load -w /System/Library/LaunchDaemons/com.apple.screensharing.plist 2>/dev/null || true
           
-          # Tunggu sebentar setelah aktivasi
-          sleep 10
-          
-          echo "✓ VNC enabled"
+          echo "✓ VNC setup and GUI login initiated."
+          echo "Waiting 15s for GUI session to stabilize..."
+          sleep 15
 
       - name: Verify VNC Port
         run: |
@@ -150,10 +98,10 @@ jobs:
           echo "Password: $VNC_PASSWORD"
           echo "================================"
           echo ""
-          echo "TROUBLESHOOTING LAYAR HITAM:"
-          echo "- Tunggu minimal **40-60 detik** setelah langkah ini selesai."
-          echo "- Coba putuskan dan sambungkan kembali VNC (disconnect/reconnect)."
-          echo "- Cek setelan mode warna (Color Depth) di VNC Viewer Anda (coba setting rendah, misal True Color)."
+          echo "TROUBLESHOOTING:"
+          echo "- If black screen: Wait 30-60 seconds"
+          echo "- Try disconnect/reconnect"
+          echo "- Check VNC Viewer color mode settings"
           echo ""
           
           # Keep everything alive
@@ -169,5 +117,5 @@ jobs:
               sudo launchctl asuser $(id -u runner) /usr/bin/open -a /System/Library/CoreServices/Finder.app &
             fi
             
-            sleep 60 
+            sleep 300
           done
